# POLARIS_GEM_e2_Real

./: README.md
basic_launch/: CMakeLists.txt  README.md  package.xml
basic_launch/launch/: dbw_joystick.launch  gem_dbw_joystick.launch  gem_pacmod_control.launch  gem_sensor_init.launch  sensor_init.launch  visualization.launch
hardware_drivers/3rd_drivers/jsk_rviz/jsk_common_msgs/jsk_footstep_msgs/: CHANGELOG.rst  package.xml
hardware_drivers/3rd_drivers/jsk_rviz/jsk_common_msgs/jsk_gui_msgs/: CHANGELOG.rst  package.xml
hardware_drivers/3rd_drivers/jsk_rviz/jsk_common_msgs/jsk_hark_msgs/: CHANGELOG.rst  package.xml
hardware_drivers/3rd_drivers/marti_messages/marti_can_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
hardware_drivers/3rd_drivers/marti_messages/marti_can_msgs/msg/: CanFrame.msg
hardware_drivers/3rd_drivers/marti_messages/marti_common_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
hardware_drivers/3rd_drivers/marti_messages/marti_common_msgs/msg/: BoolStamped.msg  ByteArrayStamped.msg  DurationStamped.msg  Float64Stamped.msg  HealthStatus.msg  Int16Stamped.msg  Int32Stamped.msg  Int64Stamped.msg  Int8Stamped.msg  KeyValueArray.msg  Matrix3x3Stamped.msg  StringArrayStamped.msg  StringStamped.msg  TimeStamped.msg  UInt16Stamped.msg  UInt32Stamped.msg  UInt64Stamped.msg  UInt8Stamped.msg
hardware_drivers/3rd_drivers/marti_messages/marti_dbw_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
hardware_drivers/3rd_drivers/marti_messages/marti_dbw_msgs/msg/: PrimaryControl.msg  PrimaryFeedback.msg  TransmissionFeedback.msg
hardware_drivers/3rd_drivers/marti_messages/marti_nav_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
hardware_drivers/3rd_drivers/marti_messages/marti_nav_msgs/msg/: Command.msg  GridMap.msg  LeadVehicle.msg  ObstacleArray.msg  Path.msg  PathPlanning.msg  PathPoint.msg  Route.msg  RouteArray.msg  RouteOffset.msg  RoutePosition.msg  RouteSpeed.msg  RouteSpeedArray.msg  TeleopState.msg  TrackedObject.msg  TrackedObjectArray.msg  VehicleControl.msg  Wgs84Sample.msg
hardware_drivers/3rd_drivers/marti_messages/marti_nav_msgs/srv/: PlanRoute.srv
hardware_drivers/3rd_drivers/marti_messages/marti_perception_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
hardware_drivers/3rd_drivers/marti_messages/marti_perception_msgs/msg/: PedestrianImageID.msg
hardware_drivers/3rd_drivers/marti_messages/marti_sensor_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
hardware_drivers/3rd_drivers/marti_messages/marti_sensor_msgs/msg/: Altitude.msg  DifferentialMeasurement.msg  DioPortState.msg  DioRealTimeData.msg  Direction.msg  Exposure.msg  Gyro.msg  Velocity.msg  WheelEncoderSet.msg
hardware_drivers/3rd_drivers/marti_messages/marti_status_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
hardware_drivers/3rd_drivers/marti_messages/marti_status_msgs/msg/: ChronyTrackingStatus.msg
hardware_drivers/3rd_drivers/marti_messages/marti_visualization_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
hardware_drivers/3rd_drivers/velodyne/velodyne_pointcloud/launch/: VLP16_points.launch
hardware_drivers/arena_camera/: CMakeLists.txt  README.rst  package.xml  setup.py
hardware_drivers/arena_camera/cmake/: Findarena_sdk.cmake
hardware_drivers/arena_camera/config/: camera_fl.yaml  camera_fr.yaml
hardware_drivers/arena_camera/include/arena_camera/: arena_camera.h  arena_camera_node.h  arena_camera_parameter.h  encoding_conversions.h
hardware_drivers/arena_camera/include/arena_camera/internal/: arena_camera.h
hardware_drivers/arena_camera/launch/: arena_camera_node_multi_device.launch
hardware_drivers/arena_camera/rosdep/: arena_sdk.rdmanifest  arena_sdk.yaml
hardware_drivers/arena_camera/scripts/: grab_and_save_image_action_server.py  individual_flash_test  toggle_camera  triggered_image_topic.py
hardware_drivers/arena_camera/src/: arena_camera.cpp  arena_camera_node.cpp  arena_camera_parameter.cpp  encoding_conversions.cpp  main.cpp  write_device_user_id_to_camera.cpp
hardware_drivers/as_drivers/pacmod/src/: pacmod_node.cpp
hardware_drivers/camera_control_msgs/: README.rst  package.xml
hardware_drivers/camera_control_msgs/srv/: SetBrightness.srv
hardware_drivers/zed-ros-wrapper/zed_wrapper/params/: common.yaml  zed2.yaml
platform_launch/: CMakeLists.txt  README.md  package.xml
platform_launch/launch/core/: all_supported_drivers.launch
platform_launch/launch/white_e2/: platform.launch
platform_launch/rviz/: white_e2_text.rviz
utility/: can_start.sh  can_stop.sh
vehicle_drivers/gem_gnss_control/: CMakeLists.txt  package.xml
vehicle_drivers/gem_gnss_control/scripts/: gem_gnss_tracker_pp.py  gem_gnss_tracker_stanley_rtk.py
vehicle_drivers/gem_gnss_control/waypoints/: xyhead_demo_pp.csv  xyhead_demo_stanley.csv
vehicle_drivers/gem_gnss_image/: CMakeLists.txt
vehicle_drivers/gem_gnss_image/scripts/: gem_gnss_image.py
vehicle_drivers/gem_model/gem_description/config_rviz/: gem_velodyne.rviz
vehicle_drivers/gem_model/gem_description/launch/: gem_vehicle.launch
vehicle_drivers/gem_model/gem_description/urdf/: gem.urdf.xacro  sick_laser_points.gazebo
vehicle_drivers/gem_pacmod_control/: CMakeLists.txt  package.xml
vehicle_drivers/gem_pacmod_control/scripts/: gem_pacmod_control.py
vehicle_drivers/gem_rviz_markers/: CMakeLists.txt  package.xml
vehicle_drivers/gem_rviz_markers/scripts/: gem_rviz_text.py
vehicle_drivers/gem_vision/: CMakeLists.txt  package.xml
vehicle_drivers/gem_vision/scripts/: gem_vision.py
vehicle_drivers/gem_visualization/: README.md
vehicle_drivers/gem_visualization/gem_description/: LICENSE  urdf_backup.tar.xz
vehicle_drivers/gem_visualization/gem_description/config_rviz/: gem_mp3.rviz
vehicle_drivers/gem_visualization/gem_description/urdf/: gem.gazebo
vehicle_drivers/gem_visualization/gem_gnss_image/: LICENSE  package.xml
vehicle_drivers/gem_visualization/gem_gnss_image/scripts/: gem_gnss_image.py
vehicle_drivers/gem_visualization/gem_rviz_markers/: CMakeLists.txt  package.xml
vehicle_drivers/gem_visualization/gem_rviz_markers/scripts/: gem_rviz_text.py
(+3 files in other folders)
