<?xml version="1.0"?>
<package format="2">
  <name>gem_gnss_image</name>
  <version>1.0.0</version>
  <description> The gem_gnss_image package </description>
  <author email="hangcui1201@gmail.com">Hang Cui</author>
  <maintainer email="hangcui1201@gmail.com"> Hang Cui </maintainer>
  <url type="repository">https://github.com/hangcui1201/POLARIS_GEM_e2_Real.git</url>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>  
  <build_depend>novatel_gps_msgs</build_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>novatel_gps_msgs</build_export_depend>    
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>  
  <exec_depend>tf</exec_depend>
  <exec_depend>novatel_gps_msgs</exec_depend>  
</package>





