<?xml version="1.0"?>
<package format="2">
  <name>gem_rviz_markers</name>
  <version>1.0.0</version>
  <description>The gem_rviz_markers package</description>
  <author email="hangcui1201@gmail.com">Hang Cui</author>
  <maintainer email="hangcui1201@gmail.com"> Hang Cui </maintainer>
  <url type="repository">https://github.com/hangcui1201/POLARIS_GEM_e2_Real.git</url>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
